Fixed problem with blue buttons on ios devices

--- a/src/scss/_categories.module.scss
+++ b/src/scss/_categories.module.scss
@@ -7,6 +7,7 @@
   padding-bottom: 2%;
 
   button {
+    color: black;
     background-color: #f9f9f9f9;
     border: 1px solid #f9f9f9f9;
     border-radius: 30px;
